--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "illuminate/http": "^11.44.2",
         "illuminate/translation": "^11.44.2",
         "justinrainbow/json-schema": "^6.3.1",
+        "laravel-lang/lang": "^15.19.3",
         "laravel-zero/framework": "^11.36.1",
         "laravel/prompts": "^0.3.5",
         "mockery/mockery": "^1.6.12",
