--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,11 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "archtechx/enums": "^1.1",
         "dragon-code/support": "^6.16",
         "illuminate/http": "^11.44.2",
         "illuminate/translation": "^11.44.2",
+        "illuminate/validation": "^11.44",
         "justinrainbow/json-schema": "^6.3.1",
         "laravel-lang/lang": "^15.19.8",
         "laravel-zero/framework": "^11.36.1",
