--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -59,7 +59,7 @@ jobs:
                 run: |
                     codestyle editorconfig
                     codestyle dependabot
-                    codestyle
+                    codestyle --parallel
 
                     composer normalize
 
