--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,16 @@
         "issues": "https://github.com/package-wizard/installer/issues",
         "source": "https://github.com/package-wizard/installer"
     },
+    "funding": [
+        {
+            "type": "boosty",
+            "url": "https://boosty.to/dragon-code"
+        },
+        {
+            "type": "yoomoney",
+            "url": "https://yoomoney.ru/to/410012608840929"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "ext-json": "*"
